@@ -1,3 +1,6 @@
+2011-06-09 gabriel.oliveira
+* Force listbox page navigation to work
+
 2011-06-08 gabriel.oliveira
 * Add Xinha Editor as an option to Preferred Text Editor
 
